<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="32dp"
    android:background="@color/light_gray_background"
    tools:context=".vue.activites.MainActivity">

    <ImageView
        android:id="@+id/intro_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/logo_planificateur_repas"
        android:src="@drawable/planigologo"
        app:tint="@color/principal_color" />

    <TextView
        android:id="@+id/intro_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Planigo"
        android:textColor="@color/principal_color"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planigo_tagline"
        android:textColor="@color/principal_color"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="60dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/principal_color"
        android:paddingVertical="12dp"
        android:text="@string/se_connecter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/principal_color"
        android:paddingVertical="12dp"
        android:text="@string/creer_un_compte"
        android:textAllCaps="false"
        android:textColor="@color/principal_color"
        android:textSize="16sp"
        app:cornerRadius="24dp" />

</LinearLayout>