<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAFAF1"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="32dp"
        tools:context=".SignupActivity">

        <TextView
            android:id="@+id/msgErreurSigup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/erreur"
            android:padding="8dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/iv_logo_signup"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/logo_planificateur_repas"
            android:src="@drawable/planigologo"
            app:tint="@color/principal_color"/>

        <TextView
            android:id="@+id/tv_signup_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/planigo_tagline_multiline"
            android:textColor="@color/principal_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prenom_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/prenom"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeColor="#80000000"
            app:hintTextColor="#80000000"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPrenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:paddingVertical="12dp"
                android:textColor="#000000"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nom_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/nom"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeColor="#80000000"
            app:hintTextColor="#80000000"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:paddingVertical="12dp"
                android:textColor="#000000"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nom_utilisateur_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/nom_utilisateur"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeColor="#80000000"
            app:hintTextColor="#80000000"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNomUtilisateur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingVertical="12dp"
                android:textColor="#000000"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_signup_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/mot_de_passe_"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeColor="#80000000"
            app:hintTextColor="#80000000"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingVertical="12dp"
                android:textColor="#000000"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/confirmer_mot_de_passe"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeColor="#80000000"
            app:hintTextColor="#80000000"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingVertical="12dp"
                android:textColor="#000000"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/secondary_color"
            android:paddingVertical="12dp"
            android:text="@string/s_inscrire"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            />

        <TextView
            android:id="@+id/buttonSignInFromSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="@string/se_connecter"
            android:textColor="@color/principal_color"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
