<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="16dp">

<TextView
    android:id="@+id/msgErreurPopupStockage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/erreur" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_ingredient"
            android:textSize="16sp"
            android:textColor="@color/principal_color"
            android:layout_marginBottom="4dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredientNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <AutoCompleteTextView
                android:id="@+id/listeIngredientAutoComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />



        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantite"
            android:textSize="16sp"
            android:textColor="@color/principal_color"
            android:layout_marginBottom="4dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantityTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="87dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/unite"
            android:textColor="@color/principal_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/uniteMesureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="end">

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        android:layout_marginEnd="24dp"
        android:textColor="@color/principal_color"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:backgroundTint="@color/secondary_color"
        android:textColor="@color/white"/>

</LinearLayout>

</LinearLayout>
