<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:background="@color/principal_color">

        <ImageView
            android:id="@+id/searchRecipeImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/recipe_book"
        android:contentDescription="@string/livre_de_recettes"
        app:tint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/livre_de_recettes"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_marginStart="16dp"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="16dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/searchRecipeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rechercher_une_recette"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:background="@drawable/search_background"
            android:layout_marginBottom="16dp"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtres"
                android:textSize="16sp"
                android:textColor="@color/black_text"
                android:layout_marginEnd="8dp"/>

            <Spinner
                android:id="@+id/filterCategorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/recipe_categories_filter"
                android:minWidth="100dp"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/filterIngredientsSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/ingredient_count_filter"
                android:minWidth="140dp"
                android:spinnerMode="dropdown"
                android:layout_marginStart="8dp"/>


            <Spinner
                android:id="@+id/filterPriceSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/price_filter"
                android:minWidth="80dp"
                android:spinnerMode="dropdown"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/resultats_de_recherche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultats_de_recherche"
            android:textSize="18sp"
            android:textColor="@color/black_text"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:clipToPadding="false"
            android:paddingBottom="80dp"/>

    </LinearLayout>
</ScrollView>

<com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/principal_color"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu" />

</LinearLayout>